--- a/Public/index.html
+++ b/Public/index.html
@@ -7,6 +7,10 @@
     <title>Movie Website</title>
 </head>
 <body>
-    <div></div>
+    <div>
+        <div>
+            
+        </div>
+    </div>
 </body>
 </html>
