--- a/Public/index.html
+++ b/Public/index.html
@@ -7,9 +7,9 @@
     <title>Movie Website</title>
 </head>
 <body>
-    <div>
+    <div class="bg-black">
         <div>
-            
+
         </div>
     </div>
 </body>
