--- a/Public/index.html
+++ b/Public/index.html
@@ -7,9 +7,9 @@
     <title>Movie Website</title>
 </head>
 <body>
-    <div class="bg-black">
+    <div class="">
         <div>
-
+            <h1>Hello</h1>
         </div>
     </div>
 </body>
