--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="">
         <div>
-            <h1 class="text-orange-600">Hello</h1>
+            <h1 class="">Hello</h1>
         </div>
     </div>
 </body>
