--- a/Public/index.html
+++ b/Public/index.html
@@ -11,7 +11,8 @@
         <div>
             <h1 class="">Navbar</h1>
             <ul>
-                <li></li>
+                <li>Home</li>
+                <li>About</li>
             </ul>
         </div>
     </div>
