--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>Home</li>
                 <li>About</li>
-                <li>List</li>
+                <li>Movie List</li>
             </ul>
         </div>
     </div>
