--- a/Public/index.html
+++ b/Public/index.html
@@ -14,6 +14,7 @@
                 <li>Home</li>
                 <li>About</li>
                 <li>Movie List</li>
+                <li>Contact Us</li>
             </ul>
         </div>
     </div>
