--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="">
-        <div id="Navbar">
+        <div id="Navbar" class="">
             <h1 class="">Navbar</h1>
             <ul>
                 <li>Home</li>
