--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
     <link href="../src/output.css" rel="stylesheet">
     <title>Movie Website</title>
 </head>
-<body class="max-w-[1640] mx-auto">
+<body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
     <div class="">
         <div id="Navbar" class="">
             <h1 class="">Navbar</h1>
