--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 <body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
     <div class="">
         <div id="Navbar" class="">
-            <h1 class="">Web<span class="font-bold">Flix</span></h1>
+            <h1 class="text-xl">Web<span class="font-bold">Flix</span></h1>
             <ul>
                 <li>Home</li>
                 <li>About</li>
