--- a/Public/index.html
+++ b/Public/index.html
@@ -10,7 +10,7 @@
     <div class="">
         <div id="Navbar" class="">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
-            <ul class="flex ">
+            <ul class="flex justify-between">
                 <li>Home</li>
                 <li>About</li>
                 <li>Movie List</li>
