--- a/Public/index.html
+++ b/Public/index.html
@@ -7,8 +7,8 @@
     <title>Movie Website</title>
 </head>
 <body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
-    <div class="flex">
-        <div id="Navbar" class="">
+    <div class="">
+        <div id="Navbar" class="flex">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
             <ul class="justify-between items-center">
                 <li>Home</li>
