--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
     <div class="">
-        <div id="Navbar" class="flex">
+        <div id="Navbar" class="flex mx-auto">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
             <ul class="justify-between items-center">
                 <li>Home</li>
