--- a/Public/index.html
+++ b/Public/index.html
@@ -17,8 +17,8 @@
                 <li>Contact Us</li>
             </ul>
         </div>
-        <div>
-            
+        <div id="Hero-Carousel">
+
         </div>
     </div>
 </body>
