--- a/Public/index.html
+++ b/Public/index.html
@@ -18,10 +18,12 @@
             </ul>
         </div>
         <div id="Hero-Carousel">
-
+            <div>
+                
+            </div>
         </div>
         <div>
-            
+
         </div>
     </div>
 </body>
