--- a/Public/index.html
+++ b/Public/index.html
@@ -10,16 +10,16 @@
     <div class="">
         <div id="Navbar" class="flex mx-auto justify-between items-center">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
-            <ul class="">
+            <div class="">
                 <li>Home</li>
                 <li>About</li>
                 <li>Movie List</li>
                 <li>Contact Us</li>
-            </ul>
+            </div>
         </div>
         <div id="Hero-Carousel">
             <div>
-                
+
             </div>
         </div>
         <div>
