--- a/Public/index.html
+++ b/Public/index.html
@@ -12,7 +12,7 @@
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
             <div class="">
                 <a>Home</a>
-                <li>About</li>
+                <a>About</a>
                 <li>Movie List</li>
                 <li>Contact Us</li>
             </div>
