--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
             <div class="">
                 <a>Home</a>
                 <a>About</a>
-                <a>Movie List</li>
+                <a>Movie List</a>
                 <li>Contact Us</li>
             </div>
         </div>
