--- a/Public/index.html
+++ b/Public/index.html
@@ -14,7 +14,7 @@
                 <a>Home</a>
                 <a>About</a>
                 <a>Movie List</a>
-                <a>Contact Us</li>
+                <a>Contact Us</a>
             </div>
         </div>
         <div id="Hero-Carousel">
