--- a/Public/index.html
+++ b/Public/index.html
@@ -11,7 +11,7 @@
         <div id="Navbar" class="flex mx-auto justify-between items-center">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
             <div class="">
-                <a>Home</a>
+                <a href="#home">Home</a>
                 <a>About</a>
                 <a>Movie List</a>
                 <a>Contact Us</a>
