--- a/Public/index.html
+++ b/Public/index.html
@@ -12,7 +12,7 @@
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
             <div class="">
                 <a href="#home">Home</a>
-                <a>About</a>
+                <a href="#about">About</a>
                 <a>Movie List</a>
                 <a>Contact Us</a>
             </div>
