--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
             <div class="">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <a>Movie List</a>
+                <a href="#movie-list">Movie List</a>
                 <a>Contact Us</a>
             </div>
         </div>
