--- a/Public/index.html
+++ b/Public/index.html
@@ -14,7 +14,7 @@
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#movie-list">Movie List</a>
-                <a href="">Contact Us</a>
+                <a href="#contact">Contact Us</a>
             </div>
         </div>
         <div id="Hero-Carousel">
