--- a/Public/index.html
+++ b/Public/index.html
@@ -8,9 +8,9 @@
 </head>
 <body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
     <div class="">
-        <div id="Navbar" class="flex mx-auto justify-between items-center">
+        <div id="Navbar">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
-            <div class="" id="topnav">
+            <div class="flex justify-between items-center" id="topnav">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#movie-list">Movie List</a>
