--- a/Public/index.html
+++ b/Public/index.html
@@ -10,7 +10,7 @@
     <div class="">
         <div id="Navbar" class="flex">
             <h1 class="text-3xl">Web<span class="font-bold">Flix</span></h1>
-            <div class="block  py-[14px] px-[16px] justify-between items-center" id="topnav">
+            <div class="block float-left py-[14px] px-[16px] justify-between items-center" id="topnav">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#movie-list">Movie List</a>
