--- a/Public/index.html
+++ b/Public/index.html
@@ -6,8 +6,8 @@
     <link href="../src/output.css" rel="stylesheet">
     <title>Movie Website</title>
 </head>
-<body class="max-w-[1640] mx-auto flex justify-between items-center p-4">
-    <div class="">
+<body>
+    <div class="max-w-[1640] mx-auto flex justify-between items-center p-4">
         <div id="Navbar" class="flex w-[1640]">
             <h1 class="text-4xl">Web<span class="font-bold">Flix</span></h1>
             <div class="block float-left py-[14px] px-[16px] justify-between items-center text-2xl" id="topnav">
