--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="max-w-[1640] mx-auto flex justify-between items-center p-4">
-        <div id="Navbar" class="flex w-[1640]">
+        <div id="Navbar" class="flex w-[1640] bg-black">
             <h1 class="text-4xl">Web<span class="font-bold">Flix</span></h1>
             <div class="block float-left py-[14px] px-[16px] justify-between items-center text-2xl" id="topnav">
                 <a href="#home">Home</a>
