--- a/Public/index.html
+++ b/Public/index.html
@@ -7,6 +7,10 @@
     <title>Movie Website</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
