--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a></a></li>
+            <li><a href="#home"></a></li>
             <li><a></a></li>
             <li><a></a></li>
             <li><a></a></li>
