--- a/Public/index.html
+++ b/Public/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="#home"></a></li>
-            <li><a></a></li>
+            <li><a href="#home"></a></li>
             <li><a></a></li>
             <li><a></a></li>
             <li><a></a></li>
