--- a/Public/index.html
+++ b/Public/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#home"></a></li>
             <li><a href="#home"></a></li>
-            <li><a></a></li>
+            <li><a href="#home"></a></li>
             <li><a></a></li>
             <li><a></a></li>
         </ul>
