--- a/Public/index.html
+++ b/Public/index.html
@@ -12,7 +12,7 @@
             <li><a href="#home"></a></li>
             <li><a href="#home"></a></li>
             <li><a href="#home"></a></li>
-            <li><a></a></li>
+            <li><a href="#home"></a></li>
             <li><a></a></li>
         </ul>
     </nav>
