--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
             <li><a href="#home"></a></li>
             <li><a href="#home"></a></li>
             <li><a href="#home"></a></li>
-            <li><a></a></li>
+            <li><a href="#home"></a></li>
         </ul>
     </nav>
 </body>
