--- a/Public/index.html
+++ b/Public/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about"></a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#movie-list"></a></li>
             <li><a href="#contact"></a></li>
         </ul>
