--- a/Public/index.html
+++ b/Public/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#movie-list"></a></li>
+            <li><a href="#movie-list">Movie List</a></li>
             <li><a href="#contact"></a></li>
         </ul>
     </nav>
