--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
     <link href="../src/output.css" rel="stylesheet">
     <title>Movie Website</title>
 </head>
-<body>
+<body class="min-h-[100vh]">
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
