--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="min-h-[100vh]">
     <nav class="bg-white shadow-xl">
-        <ul>
+        <ul class="w-[100%]">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#movie-list">Movie List</a></li>
