--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
     <title>Movie Website</title>
 </head>
 <body class="min-h-[100vh]">
-    <nav class="bg-white shadow-xl">
+    <nav class="bg-white shadow-lg">
         <ul class="w-[100%]">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
