--- a/Public/index.html
+++ b/Public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="min-h-[100vh]">
     <nav class="bg-white shadow-lg">
+        <h1>Web-Flix</h1>
         <ul class="flex justify-between items-center w-[100%] mx-auto p-4 text-2xl">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -16,6 +17,6 @@
         </ul>
     </nav>
 
-    
+
 </body>
 </html>
