--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
     <title>Movie Website</title>
 </head>
 <body class="min-h-[100vh]">
-    <nav class="bg-white shadow-lg">
+    <nav class="bg-white shadow-lg flex">
         <h1>Web-Flix</h1>
         <ul class="flex justify-between items-center w-[100%] mx-auto p-4 text-2xl">
             <li><a href="#home">Home</a></li>
