--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="min-h-[100vh]">
     <nav class="bg-white shadow-lg flex">
-        <h1 class="text-2xl right-2">Web-<span class="font-bold">Flix</span></h1>
+        <h1 class="text-2xl">Web-<span class="font-bold">Flix</span></h1>
         <ul class="flex justify-between items-center w-[100%] mx-auto p-4 text-2xl">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
