--- a/Public/index.html
+++ b/Public/index.html
@@ -9,10 +9,10 @@
 <body class="min-h-[100vh]">
     <nav class="bg-white shadow-lg flex">
         <h1 class="text-2xl pl-2">Web-<span class="font-bold">Flix</span></h1>
-        <ul class="flex justify-end items-center w-[100%] mx-auto p-4 text-2xl">
+        <ul class="flex justify-end items-center w-[100%] mx-auto text-2xl">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#movie-list">Movie List</a></li>
+            <li><a href="#movie-list">Movie-List</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
