--- a/Public/index.html
+++ b/Public/index.html
@@ -10,10 +10,10 @@
     <nav class="bg-white shadow-lg flex">
         <h1 class="text-2xl pl-2">Web-<span class="font-bold">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-2xl">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#movie-list">Movie-List</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="px-2"><a href="#home">Home</a></li>
+            <li class="px-2"><a href="#about">About</a></li>
+            <li class="px-2"><a href="#movie-list">Movie-List</a></li>
+            <li class="px-2"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
