--- a/Public/index.html
+++ b/Public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="min-h-[100vh]">
     <nav class="bg-white shadow-lg flex">
-        <h1 class="sm:text-2xl md:text-3xl lg:text-4xl pl-2">Web-<span class="font-bold">Flix</span></h1>
-        <ul class="flex justify-end items-center w-[100%] mx-auto sm:text-xl md:text-2xl lg:text-3xl">
+        <h1 class="text-2xl md:text-3xl lg:text-4xl pl-2">Web-<span class="font-bold">Flix</span></h1>
+        <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
             <li class="px-4"><a href="#home">Home</a></li>
             <li class="px-4"><a href="#about">About</a></li>
             <li class="px-4"><a href="#movie-list">Movie-List</a></li>
