Changed Navbar color

--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
     <title>Movie Website</title>
 </head>
 <body class="min-h-[100vh]">
-    <nav class="bg-white shadow-lg flex">
+    <nav class="bg-slate-900 shadow-lg flex">
         <h1 class="text-2xl md:text-3xl lg:text-4xl pl-2">Web-<span class="font-bold">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
             <li class="px-4"><a href="#home">Home</a></li>
