--- a/Public/index.html
+++ b/Public/index.html
@@ -7,8 +7,8 @@
     <title>Movie Website</title>
 </head>
 <body class="min-h-[100vh]">
-    <nav class="h-[100px] bg-slate-900 shadow-lg flex">
-        <h1 class="flex justify-start text-2xl md:text-3xl lg:text-4xl pl-2">Web-<span class="font-bold">Flix</span></h1>
+    <nav class="h-[75px] bg-slate-900 shadow-lg flex">
+        <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2">Web-<span class="font-bold">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
             <li class="px-4"><a href="#home">Home</a></li>
             <li class="px-4"><a href="#about">About</a></li>
