--- a/Public/index.html
+++ b/Public/index.html
@@ -10,7 +10,7 @@
     <nav class="h-[75px] bg-slate-800 shadow-lg flex">
         <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2 text-white">Web-<span class="font-bold text-red-600">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
-            <li class="p-4 font-bold hover:bg-red-600"><a href="#home">Home</a></li>
+            <li class="p-4 font-bold hover:bg-red-600 hover:rounded-full"><a href="#home">Home</a></li>
             <li class="p-4 font-bold hover:bg-red-600"><a href="#about">About</a></li>
             <li class="p-4 font-bold hover:bg-red-600"><a href="#movie-list">Movie-List</a></li>
             <li class="p-4 font-bold hover:bg-red-600"><a href="#contact">Contact</a></li>
