--- a/Public/index.html
+++ b/Public/index.html
@@ -10,10 +10,10 @@
     <nav class="h-[75px] bg-slate-700 shadow-lg flex">
         <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2 text-white">Web-<span class="font-bold text-red-600">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
-            <li class="px-8 py-3 font-bold text-red-600 hover:duration-200 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#home">Home</a></li>
-            <li class="px-8 py-3 font-bold text-red-600 hover:duration-200 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#about">About</a></li>
-            <li class="px-8 py-3 font-bold text-red-600 hover:duration-200 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#movie-list">Movie-List</a></li>
-            <li class="px-8 py-3 font-bold text-red-600 hover:duration-200 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#contact">Contact</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#home" class="h-[100%]">Home</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#about" class="h-[100%]">About</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#contact" class="h-[100%]">Contact</a></li>
         </ul>
     </nav>
 
