--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
 
     <!--Hero Carousel-->
     <div class="vh-[100%] border-black">
-        <img />
+        <img src="" />
     </div>
 
 </body>
