--- a/Public/index.html
+++ b/Public/index.html
@@ -7,6 +7,7 @@
     <title>Movie Website</title>
 </head>
 <body class="min-h-[100vh]">
+    <!--Navbar-->
     <nav class="h-[75px] bg-gray-800 shadow-lg flex">
         <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2 text-white">Web-<span class="font-bold text-red-600">Flix</span></h1>
         <ul class="flex justify-end items-center w-[100%] mx-auto text-xl md:text-2xl lg:text-3xl">
