--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
     <link href="../src/output.css" rel="stylesheet">
     <title>Movie Website</title>
 </head>
-<body class="min-h-[100vh]">
+<body class="min-h-[100vh] bg-gray-600">
     <!--Navbar-->
     <nav class="h-[75px] bg-gray-800 shadow-lg flex">
         <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2 text-white">Web-<span class="font-bold text-red-600">Flix</span></h1>
