--- a/Public/movieList.html
+++ b/Public/movieList.html
@@ -6,3 +6,27 @@
     <link href="../src/output.css" rel="stylesheet">
     <title>Movie List</title>
 </head>
+<body class="min-h-[100vh] bg-gray-600">
+    <!--Navbar-->
+    <nav class="h-[75px] bg-gray-800 shadow-lg flex">
+        <h1 class="flex justify-start items-center text-2xl md:text-3xl lg:text-4xl pl-2 text-white">Web-<span class="font-bold text-red-600">Flix</span></h1>
+        <ul class="flex justify-end items-center w-[100%] mx-auto md:text-xl lg:text-2xl">
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#home" class="h-[100%]">Home</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#about" class="h-[100%]">About</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
+            <li class="px-8 py-3 font-bold text-red-600 hover:duration-300 hover:bg-red-600 hover:text-white hover:rounded-full"><a href="#contact" class="h-[100%]">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!--Hero Carousel-->
+    <div class="vh-[100%] border-black">
+        <img src="" alt="" />
+    </div>
+
+
+    <!--Footer-->
+    <footer class="w-[100%] bg-gray-800">
+
+    </footer>
+</body>
+</html>
