--- a/Public/movieList.html
+++ b/Public/movieList.html
@@ -7,6 +7,8 @@
     <title>Movie List</title>
 </head>
 <body class="min-h-[100vh] bg-gray-600">
-    
+    <div>
+        
+    </div>
 </body>
 </html>
