--- a/Public/movieList.html
+++ b/Public/movieList.html
@@ -8,7 +8,9 @@
 </head>
 <body class="min-h-[100vh] bg-gray-600">
     <div>
-        
+        <div>
+            
+        </div>
     </div>
 </body>
 </html>
