--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
         <img src="" alt="" />
     </div>
 
-    <!---->
+    <!--Movie Carousel-->
 
     <!--Footer-->
     <footer class="w-[100%] bg-gray-800">
