--- a/Public/index.html
+++ b/Public/index.html
@@ -20,7 +20,9 @@
 
     <!--Hero Carousel-->
     <div class="vh-[100%] border-black">
-        <img src="" alt="" />
+        <div>
+
+        </div>
     </div>
 
     <!--Movie Carousel-->
