--- a/Public/index.html
+++ b/Public/index.html
@@ -21,7 +21,7 @@
     <!--Hero Carousel-->
     <div class="vh-[100%] border-black">
         <div>
-            <img src="" alt="" />
+            <img src="" alt="A Carousel of the latest movies" />
         </div>
     </div>
 
