--- a/Public/index.html
+++ b/Public/index.html
@@ -20,7 +20,7 @@
 
     <!--Hero Carousel-->
     <div class="vh-[100%] border-black">
-        <div>
+        <div class="">
             <img src="" alt="A Carousel of the latest movies" />
         </div>
     </div>
