--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!--Hero Carousel-->
-    <div class="vh-[100%] w-[100px] border-black">
+    <div class="vh-[100%] w-full border-black">
         <div>
             <img src="" alt="A Carousel of the latest movies" />
         </div>
