--- a/Public/index.html
+++ b/Public/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <!--Movie Carousel-->
-
+    <div>
+        
+    </div>
     <!--Footer-->
     <footer class="w-[100%] bg-gray-800">
 
