--- a/Public/index.html
+++ b/Public/index.html
@@ -27,7 +27,9 @@
 
     <!--Movie Carousel-->
     <div>
-        
+        <div>
+            
+        </div>
     </div>
     <!--Footer-->
     <footer class="w-[100%] bg-gray-800">
