--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
     <!--Movie Carousel-->
     <div>
         <div>
-            
+            <img />
         </div>
     </div>
     <!--Footer-->
