--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
     <!--Movie Carousel-->
     <div>
         <div>
-            <img src/>
+            <img src=""/>
         </div>
     </div>
     <!--Footer-->
