--- a/Public/index.html
+++ b/Public/index.html
@@ -21,7 +21,7 @@
     <!--Hero Carousel-->
     <div class="flex justify-center my-[100px] vh-[100%] w-full border-black">
         <div>
-            <img src="" alt="A Carousel of the latest movies" />
+            <img src="" alt="A carousel of the latest movies" />
         </div>
     </div>
 
