--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
     <!--Movie Carousel-->
     <div>
         <div>
-            <img src="" alt="A carousel of various"/>
+            <img src="" alt="A carousel of various movies"/>
         </div>
     </div>
     <!--Footer-->
