--- a/Public/index.html
+++ b/Public/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!--Movie Carousel-->
-    <div>
+    <div class="">
         <div>
             <img src="" alt="A carousel of various movies available on the site"/>
         </div>
