--- a/Public/index.html
+++ b/Public/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!--Movie Carousel-->
-    <div class="">
+    <div class="flex">
         <div>
             <img src="" alt="A carousel of various movies available on the site"/>
         </div>
