--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!--Hero Carousel-->
-    <div class="flex justify-center my-[100px] vh-[100%] w-full border-black">
+    <div class="flex justify-center my-[100px] vh-[100%] w-full">
         <div>
             <img src="" alt="A carousel of the latest movies" />
         </div>
