--- a/Public/index.html
+++ b/Public/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <!--Footer-->
-    <footer class="w-[100%] bg-gray-800">
+    <footer class="bg-gray-800 shadow-lg flex">
 
     </footer>
 </body>
