--- a/Public/index.html
+++ b/Public/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <!--Footer-->
-    <footer class="h-[75px] bg-gray-800 shadow-lg flex">
+    <footer class="h-[75px]　fixed bg-gray-800 shadow-lg flex">
 
     </footer>
 </body>
