--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!--Hero Carousel-->
-    <div class="flex justify-center bg-gray-400 my-[100px] vh-[100%] w-full rounded-lg">
+    <div class="flex justify-center items-center bg-gray-400 my-[100px] vh-[100%] w-full rounded-lg">
         <div>
             <img src="" alt="A carousel of the latest movies" />
         </div>
