--- a/Public/index.html
+++ b/Public/index.html
@@ -33,7 +33,9 @@
     </div>
     <!--Footer-->
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
+        <div>
 
+        </div>
     </footer>
 </body>
 </html>
