--- a/Public/index.html
+++ b/Public/index.html
@@ -35,8 +35,8 @@
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
         <div>
             <ul>
-                <li></li>
-                <li></li>
+                <li><a href="#home" class="h-[100%]">Home</a></li>
+                <li><a href="#about" class="h-[100%]">About</a></li>
                 <li></li>
                 <li></li>
             </ul>
