--- a/Public/index.html
+++ b/Public/index.html
@@ -37,7 +37,7 @@
             <ul>
                 <li><a href="#home" class="h-[100%]">Home</a></li>
                 <li><a href="#about" class="h-[100%]">About</a></li>
-                <li></li>
+                <li><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
                 <li></li>
             </ul>
         </div>
