--- a/Public/index.html
+++ b/Public/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#home" class="h-[100%]">Home</a></li>
                 <li><a href="#about" class="h-[100%]">About</a></li>
                 <li><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
-                <li></li>
+                <li><a href="#contact" class="h-[100%]">Contact</a></li>
             </ul>
         </div>
     </footer>
