--- a/Public/index.html
+++ b/Public/index.html
@@ -33,7 +33,7 @@
     </div>
     <!--Footer-->
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
-        <div>
+        <div class="">
             <ul>
                 <li><a href="#home" class="h-[100%]">Home</a></li>
                 <li><a href="#about" class="h-[100%]">About</a></li>
