--- a/Public/index.html
+++ b/Public/index.html
@@ -34,7 +34,7 @@
     <!--Footer-->
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
         <div class="flex items-center justify-center">
-            <ul class="flex items-center">
+            <ul class="flex items-center justify-center">
                 <li><a href="#home" class="h-[100%]">Home</a></li>
                 <li><a href="#about" class="h-[100%]">About</a></li>
                 <li><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
