--- a/Public/index.html
+++ b/Public/index.html
@@ -34,7 +34,7 @@
     <!--Footer-->
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
         <div class="flex items-center justify-center">
-            <ul class="flex items-center justify-center mx-auto">
+            <ul class="flex justify-end items-center w-[100%] mx-auto md:text-xl lg:text-2xl">
                 <li class="px-8 py-3 font-bold"><a href="#home" class="h-[100%]">Home</a></li>
                 <li class="px-8 py-3 font-bold"><a href="#about" class="h-[100%]">About</a></li>
                 <li class="px-8 py-3 font-bold"><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
