--- a/Public/index.html
+++ b/Public/index.html
@@ -35,10 +35,10 @@
     <footer class="h-[75px] bg-gray-800 shadow-lg flex">
         <div class="flex items-center justify-center">
             <ul class="flex items-center justify-center mx-auto">
-                <li class="px-8 py-3 font-bold"><a href="#home" class="h-[100%]">Home</a></li>
-                <li class="px-8 py-3 font-bold"><a href="#about" class="h-[100%]">About</a></li>
-                <li class="px-8 py-3 font-bold"><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
-                <li class="px-8 py-3 font-bold"><a href="#contact" class="h-[100%]">Contact</a></li>
+                <li class="px-8 py-3 font-bold text-white"><a href="#home" class="h-[100%]">Home</a></li>
+                <li class="px-8 py-3 font-bold text-white"><a href="#about" class="h-[100%]">About</a></li>
+                <li class="px-8 py-3 font-bold text-white"><a href="#movie-list" class="h-[100%]">Movie-List</a></li>
+                <li class="px-8 py-3 font-bold text-white"><a href="#contact" class="h-[100%]">Contact</a></li>
             </ul>
         </div>
     </footer>
